add endpoint get all product
